--- a/src/pages/TalksandWorkshops.css
+++ b/src/pages/TalksandWorkshops.css
@@ -35,3 +35,34 @@
   font: 400 1.5em/1.5em "Roboto", sans-serif;
   margin-bottom: 5px;
 }
+
+.single-image-box {
+  position: relative;
+  width: 30%;
+  overflow: hidden;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  height: 200px; /* Set a fixed height for better visibility */
+}
+
+.single-image-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.arrow.left {
+  left: 5px;
+}
+
+.arrow.right {
+  right: 5px;
+}
