--- a/src/pages/TalksandWorkshops.css
+++ b/src/pages/TalksandWorkshops.css
@@ -39,11 +39,10 @@
 
 .single-image-box {
   position: relative;
-  width: 30%;
+  width: 50%;
   overflow: hidden;
   margin: 10px auto;
-  height: 400px; /* Set a fixed height for better visibility */
-  width: 600px;
+  height: 30%; /* Set a fixed height for better visibility */
 }
 
 .single-image-box img {
@@ -56,7 +55,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 20px;
+  font-size: 25px;
   cursor: pointer;
 }
 
