--- a/src/pages/TalksandWorkshops.css
+++ b/src/pages/TalksandWorkshops.css
@@ -42,12 +42,12 @@
   width: 50%;
   overflow: hidden;
   margin: 10px auto;
-  height: 30%; /* Set a fixed height for better visibility */
+  height: 50%; /* Set a fixed height for better visibility */
 }
 
 .single-image-box img {
-  width: 100%;
-  height: 100%;
+  width: fit-content;
+  height: fit-content;
   object-fit: cover;
 }
 
