--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -106,6 +106,41 @@
   background-color: #ff66b2; /* Darker pink on hover */
 }
 
+.education {
+  margin-top: 40px; /* Adjusted margin */
+}
+
+.degree {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px; /* Adjusted margin */
+}
+
+.degree-logo {
+  max-width: 100px; /* Adjusted max width */
+  margin-right: 20px; /* Adjusted margin */
+}
+
+.degree-info {
+  flex: 1;
+}
+
+.school-name {
+  font-size: 24px; /* Bigger font for school name */
+  margin-bottom: 5px; /* Adjusted margin */
+}
+
+.degree-name {
+  font-size: 20px; /* Bigger font for degree name */
+  margin-bottom: 5px; /* Adjusted margin */
+}
+
+.degree-description {
+  font-size: 16px;
+  margin-left: 30px; /* Moved description to the right */
+  color: #555;
+}
+
 @media screen and (orientation: portrait) {
   .about-content {
     margin-top: 20px;
