Add ease in animation for education-intro

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -109,6 +109,16 @@
 .education-intro {
 text-align: center;
 font-size: 1.5rem;
+animation: fadeIn 3s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .degree {
