--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -130,28 +130,43 @@
 
 .animate {
   opacity: 1;
-  transform: translateX(0);
+  transition: opacity 3s ease, transform 1s ease;
+}
+
+.degree-logo,
+.degree-info {
+  transition: opacity 3s ease, transform 1s ease;
 }
 
 .degree-logo {
   max-width: 150px;
   margin-right: 40px;
   transform: translateX(-100%); /* Initial position off-screen to the left */
-  transition: transform 1.5s ease, fadeIn 2s ease;
 }
 
 .degree-info {
   flex: 1;
-  transform: translateX(100%); /* Initial position off-screen to the right */
-  transition: opacity 2s ease, transform 1.5s ease;
+  transform: translateX(50%); /* Initial position off-screen to the right */
 }
 
-.animate .degree-logo {
-  transform: translateX(0); /* Move in from the left when animated */
-}
-
+.animate .degree-logo,
 .animate .degree-info {
-  transform: translateX(0); /* Move in from the right when animated */
+  transform: translateX(0); /* Move in from the left/right when animated */
+}
+
+.degree:nth-child(2) .degree-logo,
+.degree:nth-child(2) .degree-info {
+  transition-delay: 0s; /* Delay for the second item */
+}
+
+.degree:nth-child(3) .degree-logo,
+.degree:nth-child(3) .degree-info {
+  transition-delay: 1s; /* Delay for the third item */
+}
+
+.degree:nth-child(4) .degree-logo,
+.degree:nth-child(4) .degree-info {
+  transition-delay: 2s; /* Delay for the first item */
 }
 
 .school-name {
