Changed sizing of single image boxes

--- a/src/pages/TalksandWorkshops.css
+++ b/src/pages/TalksandWorkshops.css
@@ -43,11 +43,10 @@
   position: relative;
   overflow: hidden;
   margin: 10px auto;
+  max-width: 50vw;
 }
 
 .single-image-box img {
-  width: fit-content;
-  height: fit-content;
   object-fit: cover;
 }
 
