--- a/src/pages/ToolsandModels.css
+++ b/src/pages/ToolsandModels.css
@@ -26,6 +26,10 @@
   width: calc(30% - 20px); /* Adjust width based on the number of items in a row */
 }
 
+.work-item:hover {
+  cursor: pointer;
+}
+
 .header-line {
   width: 100px;
 }
@@ -56,6 +60,26 @@
   animation: riseUp 1s ease-out;
   width: 80%;
   margin: auto;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+  overflow: hidden;
+}
+
+.expanded-image {
+  max-width: 100%;
+  max-height: 100vh;
+  cursor: pointer;
 }
 
 /* Media Query for Portrait Mode */
