--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -97,6 +97,7 @@ body, html {
 
 .contact-form h2 {
   font-size: 24px;
+  font-weight: bold; 
   margin: 30px auto;
   text-align: center;
 }
@@ -158,6 +159,13 @@ body, html {
   height: 400px; /* Set the desired height for your map */
   border: 2px solid purple;
   margin: 20px auto;
+}
+
+.FindMe {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 20px auto;
+  text-align: center;
 }
 
 @media screen and (orientation: portrait) {
