--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -154,7 +154,7 @@ body, html {
   background-color: #ff66b2;
 }
 
-.google-maps-image {
+.google-maps-container {
   width: 90%;
   height: 400px; /* Set the desired height for your map */
   border: 2px solid purple;
