--- a/src/pages/MyWork.css
+++ b/src/pages/MyWork.css
@@ -77,6 +77,7 @@ body, html {
   margin-top: 50px;
   margin-bottom: 30px;
   animation: grow 1s ease-out; /* Apply the grow animation */
+  width: 90vw;
 }
 
 .work-item {
@@ -85,17 +86,16 @@ body, html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
-  border: 3px solid pink;
-  border-radius: 20px;
+  border: 4px solid pink;
+  border-radius: 25px;
   background-color: white;
   animation: grow 1s ease-out; /* Apply the grow animation */
+  overflow: hidden;
+  width: 10px;
 }
 
 .work-item img {
   width: 100%;
-  max-width: 300px;
-  border-radius: 10px;
   margin-bottom: 10px;
 }
 
