--- a/src/pages/MyWork.css
+++ b/src/pages/MyWork.css
@@ -15,12 +15,12 @@ body, html {
   text-align: center;
   height: 92vh;
   background-attachment: fixed;
-  animation: riseUp 1s ease-out; /* Apply the translateY animation */
+  animation: my-work-riseUp 1s ease-out; /* Apply the translateY animation */
   margin-bottom: 50px;
 }
 
 /* Add keyframes for the grow animation */
-@keyframes grow {
+@keyframes my-work-grow {
   from {
     transform: scaleX(0); /* Start with zero width */
     opacity: 0;
@@ -32,7 +32,7 @@ body, html {
 }
 
 /* Add keyframes for the translateY animation */
-@keyframes riseUp {
+@keyframes my-work-riseUp {
   from {
     transform: translateY(20%);
     opacity: 0;
@@ -43,22 +43,18 @@ body, html {
   }
 }
 
-.work-title-container {
+.my-work-title-container {
   position: relative;
 }
 
-.work-title {
+.my-work-title {
   font-size: 36px;
   margin-top: 20px;
   padding: 10px 20px;
   background-color: white;
 }
 
-.header-line {
-  width: 100px;
-}
-
-.work-title-container .header-line::after {
+.my-work-title-container .my-work-header-line::after {
   content: ""; /* Add an empty content property */
   position: absolute;
   bottom: 0;
@@ -70,17 +66,17 @@ body, html {
   border-radius: 1px;
 }
 
-.work-items {
+.my-work-items {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   margin-top: 50px;
   margin-bottom: 30px;
-  animation: grow 1s ease-out; /* Apply the grow animation */
+  animation: my-work-grow 1s ease-out; /* Apply the grow animation */
   width: 90vw;
 }
 
-.work-item {
+.my-work-item {
   margin-bottom: 0;
   margin-right: 20px;
   display: flex;
@@ -89,28 +85,28 @@ body, html {
   border: 4px solid pink;
   border-radius: 25px;
   background-color: white;
-  animation: grow 1s ease-out; /* Apply the grow animation */
+  animation: my-work-grow 1s ease-out; /* Apply the grow animation */
   overflow: hidden;
   width: 10px;
 }
 
-.work-item img {
+.my-work-item img {
   width: 100%;
   margin-bottom: 10px;
 }
 
-.work-item h3 {
+.my-work-item h3 {
   font-weight: bold;
   font-size: 20px;
 }
 
-.work-item p {
+.my-work-item p {
   font-size: 16px;
   color: #555;
   margin-bottom: 10px;
 }
 
-.updates-button {
+.my-updates-button {
   margin: 0 auto; 
   display: block; /* Change to block to take full width */
   width: fit-content; /* Adjust width based on content */
@@ -123,23 +119,23 @@ body, html {
   transition: background-color 0.3s ease-in-out;
 }
 
-.updates-button:hover {
+.my-updates-button:hover {
   background-color: #ff66b2; /* Darker pink on hover */
 }
 
 /* Media Query for Portrait Mode */
 @media screen and (orientation: portrait) {
-  .work-items {
+  .my-work-items {
     margin: 20px auto; /* Added margin around the entire work items container */
     position: relative; /* Add position relative to the work items container */
     flex-direction: column;
   }
 
-  .work-item {
+  .my-work-item {
     margin-bottom: 20px;
   }
 
-  .header-line {
+  .my-work-header-line {
     width: 100vw;
   }
 }
