--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: #FFFFFF;
   font-family: 'Inter', Arial, sans-serif;
 }
 
@@ -11,7 +10,7 @@ body {
   align-items: center;
   padding: 10px;
   height: 10vh;
-  background-color: #E9E8E6;
+  background-color: lightpink;
   color: black;
 }
 
