--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -84,7 +84,7 @@
 
 .about-text p {
   font-size: 18px;
-  color: #555;
+  color: white;
 }
 
 
@@ -181,7 +181,7 @@
 .degree-description {
   font-size: 16px;
   margin-left: 20px;
-  color: #555;
+  color: white;
 }
 
 @media screen and (orientation: portrait) {
