Changed navbar colour for better contrast with purple page

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   padding: 10px;
   height: 10vh;
-  background-color: lightpink;
+  background-color: lightgrey;
   color: black;
 }
 
