--- a/src/pages/MyWork.css
+++ b/src/pages/MyWork.css
@@ -51,7 +51,6 @@ body, html {
   font-size: 36px;
   margin-top: 20px;
   padding: 10px 20px;
-  background-color: white;
 }
 
 .my-work-title-container .my-work-header-line::after {
@@ -97,6 +96,7 @@ body, html {
 .my-work-item h3 {
   font-weight: bold;
   font-size: 20px;
+  color: black;
 }
 
 .my-work-item p {
