--- a/src/pages/ToolsandModels.css
+++ b/src/pages/ToolsandModels.css
@@ -25,7 +25,7 @@
   margin-bottom: 20px;
   width: calc(30% - 20px); /* Adjust width based on the number of items in a row */
   border: 1px solid black;
-
+  background-color: plum;
 }
 
 .tools-models-work-item:hover {
