--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -10,7 +10,7 @@
   background-attachment: fixed;
 }
 
-.about-header,
+.page-header,
 .about-content,
 .my-work-button {
   animation: riseUp 1s ease-out; /* Apply the translateY animation */
@@ -40,17 +40,17 @@
   }
 }
 
-.about-header {
+.page-header {
   position: relative;
 }
 
-.about-header h2 {
+.page-header h2 {
   font-size: 36px;
   margin-bottom: 10px; /* Match the margin-bottom of the MyWork header */
   padding: 10px 20px;
 }
 
-.about-header .header-line::after {
+.page-header .header-line::after {
   content: "";
   position: absolute;
   bottom: 0;
