--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -214,6 +214,10 @@
   }
 
   .education-intro {
-    margin-bottom: 25px;
+    margin-bottom: 40px;
+  }
+
+  .degree {
+    margin-bottom: 70px;
   }
 }
