--- a/src/pages/SocialMediaIcons.css
+++ b/src/pages/SocialMediaIcons.css
@@ -12,11 +12,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: color 0.3s ease;
+  transition: color 0.3s ease, transform 0.3s ease;
 }
 
 .social-icons i:hover {
   color: purple;
+  transform: scale(1.3)
 }
 
 @media screen and (orientation: portrait) {
