Changed navbar colour

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -10,7 +10,7 @@ body {
   align-items: center;
   padding: 10px;
   height: 10vh;
-  background-color: lightgrey;
+  background-color: rgb(246, 162, 218);
   color: black;
 }
 
