--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -33,7 +33,7 @@ body {
 }
 
 .nav-links a {
-  color: rgb(105, 104, 104);
+  color: black;
   text-decoration: none;
   font-size: 1.25rem;
   position: relative;
@@ -82,7 +82,7 @@ body {
     width: 100%;
     top: 10vh;
     left: 0;
-    background-color: #E9E8E6;
+    background-color: rgb(246, 162, 218);
     padding: 20px 0;
     overflow: hidden;
     max-height: 0;
@@ -97,7 +97,8 @@ body {
   }
 
   .logo {
-    font-size: 1.5rem;
+    max-width: 30vw;
+    max-height: 12vh;
   }
 
   .nav-links a {
