More colour changes

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -29,7 +29,7 @@ body {
   display: flex;
   gap: 30px; /* Increase the gap between navbar links */
   align-items: center; /* Center the items vertically */
-  margin-right: 120px;
+  /* margin-right: 120px; */
 }
 
 .nav-links a {
