Changed text colour for T&M page

--- a/src/pages/ToolsandModels.css
+++ b/src/pages/ToolsandModels.css
@@ -74,7 +74,7 @@
 
 .tools-models-section-subtitle {
   font-size: 18px;
-  color: #555;
+  color: white;
   animation: tools-riseUp 1s ease-out;
   width: 80%;
   margin: auto;
