--- a/src/pages/Publications.css
+++ b/src/pages/Publications.css
@@ -35,7 +35,7 @@
 
 .publication a {
   display: block;
-  color: #007bff;
+  color: lightblue;
   text-decoration: none;
   font-weight: bold;
 }
@@ -53,17 +53,17 @@
 
 .work-title-container .subtitle {
   font-size: 18px;
-  color: #555;
+  color: white;
   margin-top: 30px;
   animation: riseUp 1s ease-out;
   margin-bottom: 40px;
 }
 
 .blue-link {
-  color: #007bff; /* Blue color */
+  color: lightblue; /* Blue color */
   text-decoration: underline;
 }
 
 .blue-link:visited {
-  color: #551a8b; /* Change the color for visited links */
+  color: lightpink; /* Change the color for visited links */
 }
