--- a/src/pages/ToolsandModels.css
+++ b/src/pages/ToolsandModels.css
@@ -24,7 +24,8 @@
 .tools-models-work-item {
   margin-bottom: 20px;
   width: calc(30% - 20px); /* Adjust width based on the number of items in a row */
-  border: 1px solid black;
+  border: 2px solid pink;
+  border-radius: 10px;
   background-color: lightgray;
 }
 
@@ -34,6 +35,7 @@
 
 .tools-models-work-item img {
   border: 1px solid black;
+  border-radius: 1px;
 }
 
 .tools-models-work-item h3 {
