--- a/src/pages/ToolsandModels.css
+++ b/src/pages/ToolsandModels.css
@@ -7,7 +7,6 @@
   justify-content: flex-start;
   padding: 20px;
   text-align: center;
-  height: 90vh;
   background-attachment: fixed;
   animation: tools-riseUp 1s ease-out;
 }
@@ -104,6 +103,24 @@
   max-width: 100%;
   max-height: 100vh;
   cursor: pointer;
+}
+
+.tools-models-updates-button {
+  margin-top: 40px; 
+  display: block;
+  width: fit-content;
+  padding: 15px 30px;
+  font-size: 24px;
+  text-decoration: none;
+  color: black;
+  background-color: pink;
+  border-radius: 25px;
+  transition: background-color 0.3s ease-in-out, scale 0.3s ease-in-out;
+}
+
+.tools-models-updates-button:hover {
+  background-color: #ff66b2; /* Darker pink on hover */
+  scale: 1.05;
 }
 
 /* Media Query for Portrait Mode */
