--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -53,11 +53,12 @@ body, html {
   color: black;
   background-color: pink;
   border-radius: 25px;
-  transition: background-color 0.3s ease-in-out;
+  transition: scale 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
 .about-button:hover {
   background-color: #ff66b2; /* Darker pink on hover */
+  scale: 1.05;
 }
 
 .home-image {
