--- a/src/pages/MyWork.css
+++ b/src/pages/MyWork.css
@@ -13,7 +13,7 @@ body, html {
   justify-content: flex-start;
   padding: 20px;
   text-align: center;
-  height: 92vh;
+  height: 100vh;
   background-attachment: fixed;
   animation: my-work-riseUp 1s ease-out; /* Apply the translateY animation */
   margin-bottom: 50px;
@@ -61,7 +61,7 @@ body, html {
   transform: translateX(-50%);
   width: calc(5vw); /* Set the desired width using calc and vw units */
   height: 4px;
-  background-color: purple;
+  background-color: pink;
   border-radius: 1px;
 }
 
@@ -115,11 +115,12 @@ body, html {
   color: black;
   background-color: pink;
   border-radius: 25px;
-  transition: background-color 0.3s ease-in-out;
+  transition: scale 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
 .my-updates-button:hover {
-  background-color: #ff66b2; /* Darker pink on hover */
+  background-color: #ff66b2; 
+  scale: 1.05;
 }
 
 /* Media Query for Portrait Mode */
