--- a/src/pages/MyWork.css
+++ b/src/pages/MyWork.css
@@ -59,7 +59,7 @@ body, html {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: calc(5vw); /* Set the desired width using calc and vw units */
+  width: 100px; 
   height: 4px;
   background-color: pink;
   border-radius: 1px;
@@ -129,6 +129,8 @@ body, html {
     margin: 20px auto; /* Added margin around the entire work items container */
     position: relative; /* Add position relative to the work items container */
     flex-direction: column;
+    display: flex;
+    align-items: center;
   }
 
   .my-work-item {
@@ -137,6 +139,6 @@ body, html {
   }
 
   .my-work-header-line {
-    width: 100vw;
+    width: 100px;
   }
 }
