--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -98,6 +98,7 @@
   color: black;
   background-color: pink;
   border-radius: 25px;
+  transition: background-color 0.3s ease-in-out, scale 0.3s ease-in-out;
 }
 
 .my-work-button:hover {
