Changed social media icon hover from purple to blue in navbar

--- a/src/pages/SocialMediaIcons.css
+++ b/src/pages/SocialMediaIcons.css
@@ -16,7 +16,7 @@
 }
 
 .social-icons i:hover {
-  color: rebeccapurple;
+  color: rgb(19, 9, 224);
   transition: color 0.3s ease, transform 0.3s ease;
   transform: scale(1.3)
 }
