Added animation to contact page button

--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -151,10 +151,12 @@ body, html {
   cursor: pointer;
   color: black;
   margin: 10px auto;
+  transition: background-color 0.3s ease-in-out, scale 0.3s ease-in-out;
 }
 
 .contact-form button:hover {
   background-color: #ff66b2;
+  scale: 1.05;
 }
 
 .google-maps-container {
