--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -186,11 +186,13 @@ body, html {
     align-items: left;
     margin-top: 0px;
     margin: 0 auto;
+    margin-bottom: 30px;
   }
 
   .contact-form {
     width: 95%;
     margin: 20px auto;
+    margin-bottom: 30px;
   }
 
   .contact-form h2 {
