Fixed underline issue with social media links in Navbar

--- a/src/pages/SocialMediaIcons.css
+++ b/src/pages/SocialMediaIcons.css
@@ -1,7 +1,13 @@
+/* SocialMediaIcons.css */
+
 .social-icons {
   display: flex;
   align-items: center;
   gap: 1px;
+}
+
+.social-icons .social-link {
+  text-decoration: none; /* Remove underline */
 }
 
 .social-icons i {
