--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -71,17 +71,19 @@
 
 .about-image {
   flex: 1; /* Allow the image to take up available space */
-  margin-right: 20px;
-  max-width: 400px;
+  margin-right: -5vw;
+  margin-top: -15vh;
+  margin-left: -5vw;
+  scale: .75;
 }
 
 .about-text {
   flex: 2; /* Allow the text to take up available space */
-  max-width: 600px;
+  max-width: 800px;
 }
 
 .about-text p {
-  font-size: 18px;
+  font-size: 22px;
   color: white;
 }
 
