--- a/src/pages/SocialMediaIcons.css
+++ b/src/pages/SocialMediaIcons.css
@@ -7,7 +7,7 @@
 }
 
 .social-icons .social-link {
-  text-decoration: none; /* Remove underline */
+  text-decoration: none; 
 }
 
 .social-icons i {
