--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -62,6 +62,19 @@ body, html {
   align-items: center;
   padding: 10px;
   text-decoration: none;
+  background-color: rgb(255, 255, 255, 0.3);
+  border: 1px solid pink;
+  border-radius: 10px;
+}
+
+.contact-section:hover .icon-wrapper {
+  background-color: #ff66b2;
+  border-radius: 30%;
+  border: 1px solid white;
+}
+
+.contact-section:hover .icon {
+  color: white;
 }
 
 .icon-wrapper {
@@ -72,10 +85,9 @@ body, html {
   height: 40px;
   border-radius: 50%;
   background-color: lightpink;
-  /* border: 2px solid purple; */
+  border: 1px solid purple;
   margin-right: 10px;
-  transition: border-radius 0.3s ease-in-out;
-  transition: background-color 0.2s ease-in-out;
+  transition: border-radius 0.3s ease-in-out, background-color 0.2s ease-in-out;
 }
 
 .icon-wrapper:hover {
@@ -90,7 +102,10 @@ body, html {
 
 .contact-section p {
   margin: 10px;
-  font-size: 18px;
+  font-size: 20px;
+  color: white;
+  text-shadow: 1px 0px 1px black;
+  font-weight: bold;
 }
 
 .contact-form {
