--- a/src/pages/TalksandWorkshops.css
+++ b/src/pages/TalksandWorkshops.css
@@ -28,12 +28,6 @@ p {
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 20px auto; 
-  margin-bottom: 20px;
-}
-
-.talks-workshops-images img {
-  background-color: white;
-  border: 1px solid black;
 }
 
 .teaching-image {
@@ -59,6 +53,15 @@ p {
   margin-right: 10px;
   margin-bottom: 10px;
   margin: 0 auto;
+  background-color: white;
+  border: 1px solid black;
+}
+
+.talks-workshops-final-image img {
+  width: 30vw;
+  height: 30vh;
+  object-fit: contain; 
+  margin-bottom: 20px;
 }
 
 .talks-workshops-section h2 {
