--- a/src/pages/Publications.css
+++ b/src/pages/Publications.css
@@ -8,10 +8,10 @@
 
 .divider {
   height: px;
-  color: white;
-  background-color: white;
+  color: pink;
+  background-color: pink;
   border-radius: 20px;
-  border: 1px solid white;
+  border: 1px solid pink;
   margin: 0 5vw 5vw 5vw;
 }
 
