--- a/src/pages/MyWork.css
+++ b/src/pages/MyWork.css
@@ -75,35 +75,35 @@ body, html {
   width: 90vw;
 }
 
-.my-work-item {
-  margin-bottom: 0;
+.work-item {
   margin-right: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 4px solid pink;
   border-radius: 25px;
-  background-color: white;
+  background-color: lightgray;
   animation: my-work-grow 1s ease-out; /* Apply the grow animation */
   overflow: hidden;
   width: 26vw;
 }
 
-.my-work-item img {
+.work-item img {
   width: 100%;
   margin-bottom: 10px;
 }
 
-.my-work-item h3 {
+.work-item h3 {
   font-weight: bold;
   font-size: 20px;
   color: black;
+  margin: 0px 0 0px 0;
 }
 
-.my-work-item p {
+.work-item p {
   font-size: 16px;
   color: #555;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .my-updates-button {
@@ -138,7 +138,7 @@ body, html {
     align-items: center;
   }
 
-  .my-work-item {
+  .work-item {
     margin: 20px auto;
     width: 80vw;
     display: flex;
