--- a/src/pages/MyWork.css
+++ b/src/pages/MyWork.css
@@ -86,6 +86,7 @@ body, html {
   animation: my-work-grow 1s ease-out; /* Apply the grow animation */
   overflow: hidden;
   width: 26vw;
+  cursor: pointer;
 }
 
 .work-item img {
