--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -97,13 +97,14 @@ body {
   }
 
   .nav-links.active {
-    max-height: max-content; /* Adjust this value based on your content */
+    max-height: 500px; /* Adjust this value based on your content */
     opacity: 1;
     z-index: 1;
   }
 
   .logo {
     scale: 0.15;
+    margin-left: -470px;
   }
 
   .nav-links a {
@@ -122,6 +123,7 @@ body {
     width: 100%; /* Stretch the line across the full width */
     height: 3px; /* Set the height of the dividing line */
     background-color: pink; /* Set the color of the dividing line */
+    transition: background-color 0.3s ease-in-out, height 0.3s ease-in-out;
   }
 
   .nav-links a:hover::after,
