--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -79,6 +79,15 @@ body {
   .menu-icon {
     display: block;
     font-size: 1.8rem;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .menu-icon.open {
+    transform: rotate(90deg); /* Rotate the icon when the menu is open */
+  }
+  
+  .menu-icon.close {
+    transform: rotate(0deg); /* Rotate the icon back to its original state when the menu is closed */
   }
 
   .nav-links {
@@ -97,7 +106,7 @@ body {
   }
 
   .nav-links.active {
-    max-height: 500px; /* Adjust this value based on your content */
+    max-height: fit-content; /* Adjust this value based on your content */
     opacity: 1;
     z-index: 1;
   }
